# Scheduletest

./: README.md
pipeline/: package-lock.json  package.json  pipeline.ttl  pyproject.toml
processorrepo/PrintProcessorPy/src/PrintProcessorPy/: processor.ttl
processorrepo/schedulereader/: pyproject.toml
processorrepo/schedulereader/src/schedulereader/: processor.py  processor.ttl
processorrepo/schedulewaterinfo/: pyproject.toml
processorrepo/schedulewaterinfo/src/schedulewaterinfo/: processor.py  processor.ttl
